* 删除暂时没用的asm/codegen子模块，并将少量依赖到的类移到generictype子模块中。
* SetLocaleRequestContext中增加功能：可根据request uri，自动设置与默认值不同的input/output charset

  <set-locale>
    <override uri="*.json" inputCharset="UTF-8" outputCharset="UTF-8" />
  </set-locale>

* bugfix: WebxFrameworkFilter中使用excludes排除.css,.js以后，在开发模式下直接访问webx的开发模式首页时出现页面混乱，因为internal里面的css和js也被过滤掉了。

* bugfix: ScriptModuleFactory搜索到*.class时会报错。

* 改进异常处理：当使用pipeline-exception.xml来处理异常时（生产模式），可以指定：
    1. 日志名称（loggerName和defaultLoggerName）；
    2. 日志的详略（logging和defaultLogging，可选值detailed, brief, disabled）。

    <services:pipeline xmlns="http://www.alibaba.com/schema/services/pipeline/valves">
        <handleException defaultPage="error.vm"
                         defaultLogging="detailed"
                         defaultLoggerName="my.logger">

            <on-exception type="com.alibaba.citrus.service.template.TemplateNotFoundException"
                          statusCode="404"
                          logging="brief" />

            <on-exception type="com.alibaba.citrus.service.moduleloader.ModuleNotFoundException"
                          statusCode="404"
                          logging="brief"
                          loggerName="my.logger2" />

        </handleException>
    </services:pipeline>

-- Changes in 3.0.9

-- Changes in 3.1.0

* 升级到spring 3.1.1

* 修改代码，使之和spring 3.1.x兼容
  + com.alibaba.citrus.springext.support.resolver.XmlBeanDefinitionReaderProcessor
  + com.alibaba.citrus.test.context.SpringextContextLoader
  + com.alibaba.citrus.service.resource.SpringIntegrationTests：反映Resource.getFilename()的改变

* 增加检测代码，以防止webx3.1.x和spring 3.1.1之前的版本一起使用。

-- Changes in 3.1.1

* 升级依赖的jar包：

  slf4j 1.6.6
  logback 1.0.6
  log4j 1.2.17
  junit 4.10
  rhino-js 1.7R2
  nekohtml 1.9.6.2
  xerces 2.10.0
  easymock 3.1
  jasper 6.0.35
  jexl 2.1.1
  velocity 1.7
  freemarker 2.3.19
  commons-fileupload 1.2.2
  commons-io 2.3
  commons-codec 1.6
  groovy 1.8.6
  cglib 2.2.2
  xml-apis 1.4.01
 